--- a/demo.html
+++ b/demo.html
@@ -29,63 +29,10 @@
             margin-left: 40px;
         }
     </style>
-    <script language="javascript">
-
-        let h = null;
-        let m = null;
-        let s = null;
-        let timeout = null; // Timeout
-
-        function start() {
-            if (h === null) {
-                h = parseInt(document.getElementById('h_val').value);
-                m = parseInt(document.getElementById('m_val').value);
-                s = parseInt(document.getElementById('s_val').value);
-            }
-
-            if (s === -1) {
-                m -= 1;
-                s = 59;
-            }
-
-            if (m === -1) {
-                h -= 1;
-                m = 59;
-            }
-
-            if (h === -1) {
-                clearTimeout(timeout);
-                alert('Hết giờ');
-                return false;
-            }
-
-            document.getElementById('h').innerText = h.toString();
-            document.getElementById('m').innerText = m.toString();
-            document.getElementById('s').innerText = s.toString();
-            timeout = setTimeout(function () {
-                s--;
-                start();
-            }, 1000);
-        }
-
-        function stop() {
-            clearTimeout(timeout);
-        }
-
-        function reset() {
-            clearTimeout(timeout);
-            h = parseInt(document.getElementById('h_val').value);
-            m = parseInt(document.getElementById('m_val').value);
-            s = parseInt(document.getElementById('s_val').value);
-            document.getElementById('h').innerText = document.getElementById('h_val').value;
-            document.getElementById('m').innerText = document.getElementById('m_val').value;
-            document.getElementById('s').innerText = document.getElementById('s_val').value;
-
-        }
-    </script>
 </head>
 <body>
 
+<audio src="RengReng-DangCapNhat-2458302.mp3" autoplay id="audio"></audio>
 <div class="main">
     <div class="main">
         <h1 align="center" class="color"> Đếm ngược </h1>
@@ -93,27 +40,27 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1">Hour</span>
             </div>
-            <input type="text" class="form-control" placeholder="Hour" aria-label="Username"
-                   aria-describedby="basic-addon1" id="h_val">
+            <input type="text" class="form-control"
+                   aria-describedby="basic-addon1" id="h_val" required>
         </div>
 
         <div class="input-group mb-3">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon">Minute</span>
             </div>
-            <input type="text" class="form-control" placeholder="Minute" aria-label="Username"
-                   aria-describedby="basic-addon1" id="m_val">
+            <input type="text" class="form-control"
+                   aria-describedby="basic-addon1" id="m_val" required>
         </div>
         <div class="input-group mb-3">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addo">Second</span>
             </div>
-            <input type="text" class="form-control" placeholder="Second" aria-label="Username"
-                   aria-describedby="basic-addon1" id="s_val">
+            <input type="text" class="form-control"
+                   aria-describedby="basic-addon1" id="s_val" required>
         </div>
         <p class="body">
 
-            <input type="button" value="Start" onclick="start()" class="btn btn-success"/>
+            <input type="button" id="start" value="Start" onclick="start()" class="btn btn-success"/>
 
             <input type="button" value="Stop" onclick="stop()" class="btn btn-danger"/>
             <input type="button" value="Reset" onclick="reset()" class="btn btn-primary"/> <br/> <br/>
@@ -128,5 +75,72 @@
 </div>
 </div>
 <div class="col-md-2"></div>
+<script>
+
+    let h = null;
+    let m = null;
+    let s = null;
+    let timeout = null;
+
+    function start() {
+        document.getElementById("start").disabled = true;
+        if (h === null) {
+            h = parseInt(document.getElementById('h_val').value);
+            m = parseInt(document.getElementById('m_val').value);
+            s = parseInt(document.getElementById('s_val').value);
+        }
+
+        if (s === -1) {
+            m -= 1;
+            s = 59;
+        }
+
+        if (m === -1) {
+            h -= 1;
+            m = 59;
+        }
+
+        if (h === -1) {
+            clearTimeout(timeout);
+            // alert("het gio");
+               let x = document.createElement("audio");
+               if (x.canPlayType("audio/mpeg")){
+                   x.setAttribute("src", "RengReng-DangCapNhat-2458302.mp3");
+               }
+                x.setAttribute("autoplay", "autoplay");
+                document.body.appendChild(x);
+            return false;
+
+
+
+        }
+
+        document.getElementById('h').innerText = h.toString();
+        document.getElementById('m').innerText = m.toString();
+        document.getElementById('s').innerText = s.toString();
+        timeout = setTimeout(function () {
+            s--;
+            start();
+        }, 1000);
+    }
+
+    function stop() {
+        clearTimeout(timeout);
+    }
+
+    function reset() {
+        document.getElementById("start").disabled = false;
+
+        clearTimeout(timeout);
+        document.getElementById('h').innerText = document.getElementById('h_val').value;
+        document.getElementById('m').innerText = document.getElementById('m_val').value;
+        document.getElementById('s').innerText = document.getElementById('s_val').value;
+        h = parseInt(document.getElementById('h_val').value);
+        m = parseInt(document.getElementById('m_val').value);
+        s = parseInt(document.getElementById('s_val').value);
+
+    }
+</script>
+
 </body>
 </html>
